--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a class="link btn1"href="https://www.linkedin.com/in/manuella-perlin-a001922a5"> LINKEDIN</a>
         </h1>
         <p>Site oficial da Boobalu :)</p>
-        <img src="assets/neon.jpg" class="img1">
+        <!-- <img src="assets/neon.jpg" class="img1"> -->
         <img src="assets/perfil.png" class="img2">
     </body>
 </html>
