--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         </h1>
         <p>Site oficial da Boobalu :)</p>
         <!-- <img src="assets/neon.jpg" class="img1"> -->
-        <img src="assets/perfil.png" class="img2">
+        <img src="assets/perfil.png" class="img2 column">
     </body>
 </html>
