--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
-<html>
-    <head>
-    <link rel="stylesheet" href="style.css">
-        <title>boobalu.pro</title>
-    </head>
-    <body>
-        <h1>
-            <a class="link btn1" href="https://www.twitch.tv/boobalu">TWITCH</a>
-            <a class="link btn1"href="https://www.instagram.com/spittonitt/">INSTAGRAM </a>
-            <a class="link btn1"href="https://www.livepix.gg/boobalu"> DONATE </a>
-            <a class="link btn1"href="https://www.linkedin.com/in/manuella-perlin-a001922a5"> LINKEDIN</a>
-        </h1>
-        <p>Site oficial da Boobalu :)</p>
-        <!-- <img src="assets/neon.jpg" class="img1"> -->
-        <img src="assets/perfil.png" class="img2 column">
-    </body>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+    a.button {
+        padding: 1px 6px;
+        border: 1px outset buttonborder;
+        border-radius: 3px;
+        color: black;
+        background-color: rgb(224, 255, 202);
+        text-decoration: none;
+    }
+
+    body {
+	    background-color: #f7fff5;
+	    text-align: none;
+    }
+
+    * {
+        font-family: Georgia;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    p {
+        font-family: Verdana;
+    }
+
+</style>
+
+    <title>Sobre mim - Manuella Perlin</title>
+</head>
+<body>
+    <h1>Manuella Perlin</h1>
+        <h2>Sobre mim</h2>
+            <p>Olá! Sou a Manu. Faço engenharia de software na FCTE e essa aqui é uma das páginas que sugeriram que a gente fizesse para a iniciação da CJR! Eu tenho 20 anos, nasci em Salvador, Bahia, e tenho dois gatinhos.</p>
+        <h2>Gostos</h2>
+            <p>A página é verde mas minha cor favorita é azul! Eu gosto muito de computadores, tudo que você consegue fazer em um computador eu gosto de fazer. Jogar, programar, calcular, pesquisar, assistir e mais cem coisas na lista. Eu também gosto muito de filmes de terror, de gatinhos e, pasmem, adoro usar Linux.</p>
+        <h2>Redes sociais</h2>
+        <a href="https://www.instagram.com/manu.htmll/" class="button">Instagram</a>
+        <a href="https://www.linkedin.com/in/manuella-perlin" class="button">LinkedIn</a>
+</body>
 </html>
