--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body>
     <h1>Manuella Perlin</h1>
         <h2>Sobre mim</h2>
-            <p>Olá! Sou a Manu. Faço engenharia de software na FCTE e essa aqui é uma das páginas que sugeriram que a gente fizesse para a iniciação da CJR! Eu tenho 20 anos, nasci em Salvador, Bahia, e tenho dois gatinhos.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
         <h2>Gostos</h2>
-            <p>A página é verde mas minha cor favorita é azul! Eu gosto muito de computadores e de todas as coisas factíveis em um computador. Jogar, programar, calcular, pesquisar, assistir e mais cem coisas na lista. Também gosto muito de filmes de terror, de gatinhos e, pasmem, adoro usar Linux.</p>
+            <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
         <h2>Redes sociais</h2>
         <a href="https://www.instagram.com/manu.htmll/" class="button">Instagram</a>
         <a href="https://www.linkedin.com/in/manuella-perlin" class="button">LinkedIn</a>
